# length-based-batching-adapter

./: README.md  pyproject.toml  todo.md
benchmarks/: benchmark_lba.py  ddp_benchmark.py  ddp_smoke.py
docs/: benchmark_145.md  design.md  edge_cases.md  usage.md  v1.md  v2.md
src/lba/: __init__.py  _adapter_logging.py  _api_types.py  _candidate_index.py  _candidate_search.py  _cost.py  _distributed_cost.py  _distributed_flush.py  _iteration.py  _log_events.py  _log_files.py  _pin_memory.py  _records.py  _run_reporter.py  _source_records.py  adaptive.py  budget.py  candidates.py  config.py  distributed.py  estimator.py  loader.py  logging_utils.py  metrics.py  planner.py  prefetch.py  source.py  spill.py  types.py  wrapper.py
tests/: test_adaptive.py  test_benchmarks.py  test_budget.py  test_candidates.py  test_distributed.py  test_distributed_cost.py  test_estimator.py  test_lightning.py  test_loader.py  test_logging.py  test_metrics.py  test_planner.py  test_public_api.py  test_source.py  test_wrapper.py
