[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lba"
version = "2.0.0"
description = "Length-based DataLoader for variable-length sequence datasets."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "zhuyin" }]
dependencies = ["torch>=2"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/rookiejune/length-based-batching-adapter"
Repository = "https://github.com/rookiejune/length-based-batching-adapter"
Issues = "https://github.com/rookiejune/length-based-batching-adapter/issues"

[project.optional-dependencies]
dev = ["lightning>=2.6", "pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
